# cycleOpt

./: CMakeLists.txt  input_sample.json
.github/: copilot-instructions.md
data/BUET/: BUET.osim
docs/: architecture.md  cycleopt_structure.dbml  json_input_spec.md
docs/docs/: cycleopt_structure.md  requirement.md
include/cycleopt/application/: objective_function.hpp  optimization_service.hpp
include/cycleopt/domain/: bicycle_geometry.hpp  cycling_condition.hpp  point3d.hpp  riding_style.hpp  simulation_scenario.hpp  subject_model.hpp
include/cycleopt/infrastructure/: human_model_builder.hpp  json_input_loader.hpp  moco_problem_translator.hpp  open_sim_model_factory.hpp  opensim_adapter.hpp  result_exporter.hpp
learning_opensim/: CMakeLists.txt  README.md  test_moco_basics.cpp  test_model_building.cpp  test_scaling.cpp
src/application/: objective_function.cpp  optimization_service.cpp
src/domain/: bicycle_geometry.cpp  cycling_condition.cpp  riding_style.cpp  simulation_scenario.cpp  subject_model.cpp
src/infrastructure/: human_model_builder.cpp  json_input_loader.cpp  moco_problem_translator.cpp  open_sim_model_factory.cpp  opensim_adapter.cpp  result_exporter.cpp
src/interface/: main.cpp
tests/: test_main.cpp
